--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.5s">
                     <div class="p-lg-5 ps-lg-0">
                         <div class="section-title text-start">
-                            <h1 dir="rtl" class="display-5 mb-4"> لماذا عليك إختيار Muscle Up </h1>
+                            <h1 style="text-align: right;"  dir="rtl" class="display-5 mb-4"> لماذا عليك إختيار Muscle Up </h1>
                         </div>
                         <p dir="rtl" class="mb-4 pb-2"> لأنه منتج طبيعي 100% و يحتوي على نباتات طبيعية و فيتامينات  تساعد على تقوية العضلات و زيادة الإستشفاء العضلي و زيادة ضخامة الجسم </p>
                         <p dir="rtl" class="mb-4 pb-2"> أيضاً هو منتج مصدق عليه و هذه هي شهادة التصديق </p>
@@ -349,6 +349,29 @@
                 <div class="col-lg-6 pe-lg-0" style="min-height: 400px;">
                     <div class="position-relative h-100">
                         <img class="position-absolute img-fluid w-100 h-100" src="img/feature.png" style="object-fit: contain;" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
+        <div class="container feature px-lg-0">
+            <div class="row g-0 mx-lg-0">
+                <div class="col-lg-6 feature-text py-5 wow fadeIn" data-wow-delay="0.5s">
+                    <div class="p-lg-5 ps-lg-0">
+                        <div class="section-title text-start">
+                            <h1 style="text-align: right;" dir="rtl" class="display-5 mb-4">ينصح به أشهر مدربين الياقة البدنية  </h1>
+                        </div>
+                        <p dir="rtl" class="mb-4 pb-2">لقد ذهلت عندما إستخدمت Muscle Up لأول مرة و كنت استخدمه كانه مكمل غذائي عادي مثله مثل أي منتج أخر و لكن اكتشفت ان مكونات المنتج الطبيعية كان لها دور 
+                            كبير في زيادة الكتلة العضلية لدي و لقد نصحت به جميع المتدربين لدي من الرجال و النساء و كانت النتائج لديهم مماثلة للنتائج لدي و أنصح الجميع به دائماً 
+                        </p>
+                        <p dir="rtl" class="mb-4 pb-2"> داليا درويش </p>
+                       
+                    </div>
+                </div>
+                <div class="col-lg-6 pe-lg-0" style="min-height: 400px;">
+                    <div class="position-relative h-100">
+                        <img class="position-absolute img-fluid w-100 h-100" src="img/Fustany-fitness-egyptian-fitness-stars-on-instagram-1.jpg" style="object-fit: contain;" alt="">
                     </div>
                 </div>
             </div>
